# api-horario

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
api/: main.py
api/bbdd/: __init__.py  bbdd.py
api/bbdd/dao/: __init__.py  dao_asignatura.py  dao_aula.py  dao_grupo.py  dao_horario.py  dao_profesor.py  dao_reserva.py
api/bbdd/tablas/: __init__.py  tabla_asignatura.py  tabla_aula.py  tabla_dia_semana.py  tabla_fecha.py  tabla_fechas.py  tabla_grupo.py  tabla_horario.py  tabla_profesor.py  tabla_reserva.py  tabla_tramo_horario.py
api/bbdd/utils/: __init__.py  functions.py  triggers.py
api/config/: __init__.py  path_settings.py
api/esquemas/: __init__.py  esquemas_asignatura.py  esquemas_aula.py  esquemas_dia_semana.py  esquemas_grupo.py  esquemas_horario.py  esquemas_profesor.py  esquemas_reserva.py  esquemas_tramo.py
api/esquemas/profesor/: __init__.py  esquemas_profesor.py
api/excepciones/auth/: __init__.py  excepciones_auth.py
api/excepciones/bbdd/: __init__.py  excepciones_bbdd.py
api/excepciones/genericas/: __init__.py  excepciones_genericas.py
api/excepciones/profesor/: __init__.py  excepciones_profesor.py
api/middleware/auth/: auth_middleware.py
api/routers/: __init__.py  router_asignatura.py  router_aula.py  router_grupo.py  router_horario.py  router_login.py  router_profesor.py  router_reserva.py
api/servicios/: servicio_asignatura.py  servicio_aula.py  servicio_grupo.py  servicio_horario.py  servicio_jwt.py  servicio_login.py  servicio_profesor.py  servicio_reserva.py
src/institutoapi/: main.py
src/institutoapi/bbdd/: __init__.py  bbdd.py
src/institutoapi/config/: __init__.py  client_secret-example.json  client_secret.json  path_settings.py  settings.py
src/institutoapi/esquemas/: esquemas_aula.py  esquemas_horario.py  esquemas_reserva.py
src/institutoapi/middleware/: auth_middleware.py
src/institutoapi/modelos/: __init__.py  modelo_aula.py  modelo_dia_semana.py  modelo_error.py  modelo_horario.py  modelo_profesor.py  modelo_reserva.py  modelo_tramo_horario.py
src/institutoapi/respuestas/: responses.py
src/institutoapi/routers/: __init__.py  router_asignatura.py  router_aula.py  router_grupo.py  router_horario.py  router_login.py  router_profesor.py  router_reserva.py
src/institutoapi/servicios/: servicio_asignatura.py  servicio_aula.py  servicio_grupo.py  servicio_horario.py  servicio_jwt.py  servicio_login.py  servicio_profesor.py  servicio_reserva.py
src/institutoapi/utils/: __init__.py  custom_router.py
tests/: conftest.py
tests/test-auth/: test_permisos_routers.py
(+30 files in other folders)
