[build-system]
requires = ["setuptools>=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "institutoapi"
version = "1.0.0"
description = "API para las web de reservas del instituto IES Torre del Rey"
readme = "README.md"
authors = [
	{email = "abellp13@gmail.com"},
	{name = "Abel López Parrado"}
]
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
  	"uvicorn==0.17.6",
	"pydantic==1.9.1",
	"email-validator==1.2.1",
	"fastapi==0.78.0",
	"sqlmodel==0.0.6",
	"PyJWT==2.4.0",
	"SQLAlchemy==1.4.35",
	"starlette==0.19.1",
	"itsdangerous==2.1.2",
	"google-auth-oauthlib==0.5.2",
	"google-api-python-client==2.50.0",
	"setuptools==62.3.3"
]

[project.optional-dependencies]
test = [
	"pytest>=7.0",
    "pytest-cov>=3.0",
	"tox>=3.20"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=institutoapi"
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310
isolated_build = True

[gh-actions]
python =
    3.10: py310

[testenv]
changedir =
	tests
deps =
    -r{toxinidir}/requirements.txt
    -r{toxinidir}/requirements-dev.txt
commands =
    pytest --basetemp={envtmpdir}
"""
