[metadata]
name = instituto-api
description = API para las web de reservas del instituto IES Torre del Rey
author = Abel López Parrado
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    institutoapi
install_requires =
	SQLAlchemy>=1.4.37
	uvicorn>=0.17.6
	fastapi>=0.78.0
	starlette>=0.19.1
	pydantic>=1.9.1
	PyJWT>=2.4.0
	setuptools>=62.3.3

python_requires = >=3.10
package_dir =
    =src
zip_safe = no
