[metadata]
name = institutoapi
description = API para las web de reservas del instituto IES Torre del Rey
author = Abel López Parrado
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    institutoapi
install_requires =
	uvicorn==0.17.6
	pydantic==1.9.1
	email-validator==1.2.1
	fastapi==0.78.0
	sqlmodel==0.0.6
	PyJWT==2.4.0
	psycopg2==2.9.3
	SQLAlchemy==1.4.35
	starlette==0.19.1
	itsdangerous==2.1.2
	google-auth-oauthlib==0.5.2
	google-api-python-client==2.50.0
	setuptools==62.3.3
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
